feedback-fix: title-content align

--- a/app/assets/stylesheets/responsive-home.scss
+++ b/app/assets/stylesheets/responsive-home.scss
@@ -184,8 +184,8 @@
 		}
 
 		.homeContentNews .newsContent {
-			margin-left:15px;
 			margin-right:0;
+    		width: 100%;
 		}
 
 		.homeContentNews .viewMoreContent {
